# e-commerce-django

./: .gitignore  README.md  pyproject.toml
e_commerce_django/: manage.py
e_commerce_django/e_commerce_django/: asgi.py  settings.py  urls.py  wsgi.py
e_commerce_django/store/: urls.py
e_commerce_django/store/middlewares/: auth.py
e_commerce_django/store/migrations/: 0001_initial.py
e_commerce_django/store/models/: category.py  customer.py  order.py  product.py
e_commerce_django/store/static/store/: style.css
e_commerce_django/store/templates/store/: base.html  cart.html  index.html  login.html  orders.html  signup.html
e_commerce_django/store/templatetags/: cart.py  custom_filter.py
e_commerce_django/store/views/: cart.py  checkout.py  home.py  login.py  orders.py  signup.py
