[tool.poetry]
name = "e-commerce-django"
version = "0.1.0"
description = "Simple e-commerce website"
authors = ["Eric Dasse <christ.gououi@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
loguru = "^0.7.2"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-django = "^4.5.2"
isort = "^5.12.0"
djlint = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
